...
            }
            )
            VStack {
                SubjectTextfield(
                    text: Binding(get: { contactViewModel.state.subject }, set: { value in contactViewModel.onEvent(event: ContactUiEvent.OnSubjectChange(value: value))
                    }),
                    defaultText: "Subject"
                )
                .accentColor(.primaryColor)
                .overlay {
                    if contactViewModel.state.subjectError {
                    RoundedRectangle(cornerRadius: 5)
                        .stroke(.red, lineWidth: 2)}
...
                
                Spacer()
                
                Button(action: {
                    contactViewModel.onEvent(event: ContactUiEvent.AttemptToSend(intent: { SupportEmail(subject: contactViewModel.state.subject, body: contactViewModel.state.content).send(openURL: openURL) }))
                }, label: {
                    Text("Send")
                        .padding()
                        .font(.title3)
                        .foregroundColor(.onPrimary)
                })
                .disabled(contactViewModel.state.subject.isEmpty || contactViewModel.state.content.isEmpty || contactViewModel.state.content == "Message")
                .frame(maxWidth: .infinity)
...
